# CV_Practice

./: .gitignore  CMakeLists.txt  CMakeSettings.json  readme.md
abs/: CMakeLists.txt  abs.cpp  abs.h
python/: python.py
